--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="./style.css">
-    <title>Pagina Inicial</title>
+    <title>SKULL LOCADORA | Menu</title>
   </head>
 <header>
     
-    <h1>LOCADORA</h1>
+    <h1> <img src="./spider_Skull.jpg" height="50px" width="50px" alt="">SKULL  LOCADORA <img src="./spider_Skull.jpg" height="50px" width="50px" alt=""> </h1>
     <input type="text" id="barraBusca" placeholder="Digite o nome do filme">
-    <button id="botaoBuscar">Buscar</button>
+    <button id="botaoBuscar" onclick="myFunction()">Buscar</button>
     <div id="resultados"></div>  
     <div class="navbar">
       <ul class="menu">
@@ -28,10 +28,10 @@
             <li><a href="#">Hype</a></li>
           </ul>
         </li>
-        <li class="menu-item">Contato
+       <!-- <li class="menu-item">Contato
           <ul class="submenu">
             <li><a href="#">(41) 9 9999-9999</a></li>
-          </ul>
+          </ul> -->
         </li>
       </ul>
     </div>    
@@ -73,7 +73,7 @@
     <li>Loja especializada em locação de filmes, conteudo grande variedade e diversão, para você e sua família!</li>
     <br>
     <br>
-    <tr>locadora.io</tr>
+    <tr>LOCADORA</tr>
     <br>
     <br>  
 </table>  
